Formatting and some content for GitHub

--- a/DS-100_Technical_Guide.ipynb
+++ b/DS-100_Technical_Guide.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "---\n",
     "## **The Shared Computing Cluster (SCC)** <a id='scc'></a>\n",
     "\n",
     "The SCC is what all students in DS-100 will be using to run the files required for their assignments. It is a diverse Linux cluster of numerous components including over 9,000 shared CPU cores, 250 GPU cores and 1 petabyte of storage. The SCC is mainly used for tasks that require high-performance computing from disciplines such as engineering, biostatistics, and machine learning. \n"
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "---\n",
     "## **Python** <a id='python'></a>"
    ]
   },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -218,13 +218,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "---\n",
     "## **Importing packages** <a id='packages'></a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -748,9 +748,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Base Table\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -784,6 +791,14 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Table #1\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -805,6 +820,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Table #2\n"
+     ]
     },
     {
      "data": {
@@ -834,6 +857,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Table #3\n"
+     ]
     },
     {
      "data": {
@@ -872,21 +903,24 @@
     "ca_where = ca_table.with_columns(\n",
     "    'Extra', ['?' for i in range(4)]\n",
     ")\n",
-    "\n",
+    "print('Base Table')\n",
     "ca_where.show()\n",
     "\n",
     "\n",
     "# shows rows in the table where there is a '?' in the 'Course Assistants' column\n",
     "# where(column, value) is what is being used\n",
+    "print('\\n', 'Table #1')\n",
     "ca_where.where('Course Assistants', 'Ethan Chang').show()\n",
     "\n",
     "# shows rows in the table where values in 'Course Assistants' are equal to 'Extra'\n",
     "# where(column, predicate, column) is being used, are.equal_to is a predicate\n",
+    "print('\\n', 'Table #2')\n",
     "ca_where.where('Course Assistants', are.equal_to, 'Extra').show()\n",
     "\n",
     "# shows rows in the table where values in 'Extra' are equal to '?' (which is all values)\n",
     "# where(column, predicate) is being used here\n",
     "# this is similar to the first example with 'Ethan Chang', but this one uses are.equal_to()\n",
+    "print('\\n', 'Table #3')\n",
     "ca_where.where('Extra', are.equal_to('?')).show()"
    ]
   },
@@ -894,13 +928,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **GitHub** <a id='github'></a>"
+    "---\n",
+    "## **GitHub** <a id='github'></a>\n",
+    "\n",
+    "GitHub is a website where people can store the code they wrote for specific projects. It also allows developers to collaborate together and identify bugs/issues. This guide is on GitHub, and if there is an problem with the guide or suggestion you have, you can create a new issue on GitHub to let the contributors know. \n",
+    "\n",
+    "If you are considering going into a field with software development intertwined into it in any form, it would be essential to learn how to use Git and GitHub, or one of their alternatives."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
