--- a/DS-100_Technical_Guide.ipynb
+++ b/DS-100_Technical_Guide.ipynb
@@ -17,6 +17,7 @@
     "- [Packages](#packages)\n",
     "    - [NumPy](#numpy)\n",
     "    - [datascience](#datascience)\n",
+    "- [Understanding Documentation](#documentation)\n",
     "- [GitHub](#github)"
    ]
   },
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,14 +99,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Str (Strings & text) (Lec #4)"
+    "#### Str (Strings & text) (Lec #4)\n",
+    "\n",
+    "Strings are a set of characters of any length. Additionally, strings that consist of only numbers and/or one decimal point can be converted into ints and floats with their respective functions (int(), float()). While all values can be converted into a string, strings won't always be able to change back into their previous data type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234 <class 'str'>\n",
+      "1234 <class 'int'>\n",
+      "1234 <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_str = '1234'\n",
+    "print(x_str, type(x_str))\n",
+    "\n",
+    "x_str_to_int = int(x_str)\n",
+    "print(x_str_to_int, type(x_str_to_int))\n",
+    "\n",
+    "x_str_revert = str(x_str_to_int)\n",
+    "print(x_str_revert, type(x_str_revert))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Arrays/Lists "
+    "#### Arrays/Lists \n",
+    "\n",
+    "Arrays (or lists) contain a sequence of values.\n",
+    "\n",
+    "- All elements of an array should have the same value\n",
+    "    - In python, an array/list can have a variety of different values\n",
+    "    - For arrays from NumPy or the datascience package, each element must be of the same type\n",
+    "- Arithmetic is applied to each element individually\n",
+    "- Adding arrays adds their respective elements together (if they're the same length)\n",
+    "    - Using '+' on lists from python will *not* add their elements together, it will instead *concatenate* multiple lists and create a new list\n",
+    "- A column of a table from the datascience package is an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy array:\n",
+      " [6 6 6 6 6]\n",
+      "------------------\n",
+      "Python list:\n",
+      " [1, 2, 3, 4, 5, 5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np_array1 = np.array([1, 2, 3, 4, 5])\n",
+    "np_array2 = np.array([5, 4, 3, 2, 1])\n",
+    "\n",
+    "# adding two numpy arrays together will add each element in the array \n",
+    "# to the corresponding element in the other array\n",
+    "print('NumPy array:\\n', np_array1 + np_array2)\n",
+    "\n",
+    "\n",
+    "print('------------------')\n",
+    "\n",
+    "\n",
+    "py_list1 = [1, 2, 3, 4, 5]\n",
+    "py_list2 = [5, 4, 3, 2, 1]\n",
+    "\n",
+    "# adding two python lists together will concatenate the lists, NOT add the elements\n",
+    "print('Python list:\\n', py_list1 + py_list2)\n"
    ]
   },
   {
@@ -120,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -154,12 +230,14 @@
     "\n",
     "### **Using Functions** (Lec #3)\n",
     "\n",
-    "A function is a block of code that will run whenever it is called. The variable listed inside of the parentheses are paramters, while the actual value that is sent to the function are arguments. Additionally, some functions can take *multiple* arguments (i.e. np.array(), max(), min(), etc)."
+    "A function is a block of code that will run whenever it is called. The variable listed inside of the parentheses are parameters, while the actual value that is sent to the function are arguments. Additionally, some functions can take *multiple* arguments (i.e. np.array(), max(), min(), etc).\n",
+    "\n",
+    "**Some** functions have optional parameters. These parameters do not need to be specified in-order for the function to work. For example, in np.array() you can specify the type of data all elements should be, but NumPy can do that automatically if you choose to *not* specify."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +289,44 @@
    "metadata": {},
    "source": [
     "\n",
-    "### **Conversions** (Lec #4)"
+    "### **Conversions** (Lec #4)\n",
+    "\n",
+    "In Python, the type of a value can be changed very often, but sometimes you will be unable to change it back to its original format or value. \n",
+    "\n",
+    "Use functions to change the type of a value:\n",
+    "- int()\n",
+    "- float()\n",
+    "- str()\n",
+    "- list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'> [1, 2, 3, 4, 5]\n",
+      "<class 'str'> [1, 2, 3, 4, 5]\n",
+      "<class 'list'> ['[', '1', ',', ' ', '2', ',', ' ', '3', ',', ' ', '4', ',', ' ', '5', ']']\n"
+     ]
+    }
+   ],
+   "source": [
+    "conv_list = [1, 2, 3, 4, 5]\n",
+    "print(type(conv_list), conv_list)\n",
+    "\n",
+    "# changing the list to a str\n",
+    "conv_list_str = str(conv_list)\n",
+    "print(type(conv_list_str), conv_list_str)\n",
+    "\n",
+    "# attempting to change the str back to its original list form\n",
+    "# note how it does not work\n",
+    "conv_list_revert = list(conv_list_str)\n",
+    "print(type(conv_list_revert), conv_list_revert)"
    ]
   },
   {
@@ -219,12 +334,26 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## **Importing packages** <a id='packages'></a>"
+    "## **Importing packages** <a id='packages'></a>\n",
+    "\n",
+    "To import a package, use the *import* keyword.\n",
+    "\n",
+    "From\n",
+    "- Using *from* will let you specify what functions to import from a package or file, use * to import everything\n",
+    "- When using *from*, you can use functions as if they were defined within the current file\n",
+    "    - For example, if you simply import datascience, you will need to add 'datascience' before every function from the package\n",
+    "        - datascience.Table() instead of just Table()\n",
+    "\n",
+    "As\n",
+    "- Using *as* will let you rename a package or function\n",
+    "    - For example, you can import numpy as np, which will let you use np.array() instead of numpy.array()\n",
+    "    - This effectively shortens the number of characters you need to type\n",
+    "    - Some packages like numpy are commonly imported as np, so it is good practice to do always import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +380,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### np.array"
+    "#### np.array\n",
+    "np.array('array_like object', dtype=None)\n",
+    "\n",
+    "Arrays from NumPy are similar to the lists in Python, but they are not as flexible when it comes to the variability of data types it can hold at once. All elements within a NumPy array must be the same data type. NumPy will try to pick the data type that all values within the array can fit into (*without* removing any parts of an element)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<U32 ['1' '2' '3' '4.0' '5']\n",
+      "float64 [ 1.  2.  3.  4.  5.]\n",
+      "<U1 ['1' '2' '3' '4' '5']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NumPy is unsure if the '2' can become an int or float, \n",
+    "# so it converts all the elements to str\n",
+    "array_mixed1 = np.array([1, '2', 3, 4.0, 5])\n",
+    "print(array_mixed1.dtype, array_mixed1)\n",
+    "\n",
+    "# Numpy tries to keep the information stored in the '4.0' float \n",
+    "# so it converts all the other elements to float\n",
+    "array_mixed2 = np.array([1, 2, 3, 4.0, 5])\n",
+    "print(array_mixed2.dtype, array_mixed2)\n",
+    "\n",
+    "# You can however force NumPy to convert all the elements to a specific type\n",
+    "array_mixed3 = np.array([1, 2, 3, 4, 5], dtype=str)\n",
+    "print(array_mixed3.dtype, array_mixed3)"
    ]
   },
   {
@@ -285,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +484,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +546,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +566,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### t.select(*column_or_columns*) (Lec #3)\n",
+    "#### t.select\n",
+    "t.select(*column_or_columns*)\n",
+    "\n",
     "The select function from the datascience package allows you to select specific rows in a table. You can specify either one column or multiple using the column names (in string format) or the index of the column (with an int).\n",
     "\n",
     "'.select()' can *only* be used on a table, and it returns a *new* table with the specified columns"
@@ -411,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +694,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### t.drop(*column_or_columns*) (Lec #3)\n",
+    "#### t.drop\n",
+    "t.drop(*column_or_columns*)\n",
     "\n",
     "As the name suggests, 'drop' will *remove* or drop the column(s). You can use either the column name or index to specify which columns you want to remove. Additionally, 'drop' will return a *new* table.\n",
     "\n",
@@ -538,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -653,14 +819,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### t.sort(*column_or_label, descending=False, distinct=False*) (Lec #3)\n",
+    "#### t.sort\n",
+    "t.sort(*column_or_label, descending=False, distinct=False*)\n",
     "\n",
     "'sort' will return a *new* table with the rows sorted according to the values in a column. Unless specified, 'sort' will always sort in ascending order, while also keeping non-unique values. Setting 'descending' to true will sort in descending order, and setting 'distinct' to true will remove non-unique values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -736,19 +903,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### t.where(*column_or_label, value_or_predicate=None, other=None*) (Lec #3)\n",
+    "#### t.where (Lec #3)\n",
+    "\n",
+    "t.where(*column_or_label, value_or_predicate=None, other=None*)\n",
     "\n",
     "'where' takes in up to three arguments: \n",
-    "- the first one being a column of the table as either a label/name (str) or an index (int)\n",
-    "- the second being a function that is applied to every value in the specified column and keeps values that are True, or if value_or_predicate is a single value, only rows that are equal to the value in the specified column are kept\n",
-    "- the third being an optional label to make pairwise comparisons\n",
+    "1. The column or label of the column you want to filter by, this can be a string or int (for the index of the column)\n",
+    "2. Value or predicate that you want to filter by\n",
+    "    - If you want to filter by a specific value, you can use a string, int, or float\n",
+    "    - If you want to filter by a predicate, you can use a function that returns a boolean value\n",
+    "3. Optional label for pairwise comparisons\n",
     "\n",
-    "There are a variety of predicates that can be used [here](http://data8.org/datascience/predicates.html?highlight=#datascience.predicates.are) is a list of all of them with examples."
+    "There are a variety of predicates that can be used, [here](http://data8.org/datascience/predicates.html?highlight=#datascience.predicates.are) is a list of all of them with examples."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -912,10 +1083,12 @@
     "print('\\n', 'Table #1')\n",
     "ca_where.where('Course Assistants', 'Ethan Chang').show()\n",
     "\n",
+    "\n",
     "# shows rows in the table where values in 'Course Assistants' are equal to 'Extra'\n",
     "# where(column, predicate, column) is being used, are.equal_to is a predicate\n",
     "print('\\n', 'Table #2')\n",
     "ca_where.where('Course Assistants', are.equal_to, 'Extra').show()\n",
+    "\n",
     "\n",
     "# shows rows in the table where values in 'Extra' are equal to '?' (which is all values)\n",
     "# where(column, predicate) is being used here\n",
@@ -929,11 +1102,24 @@
    "metadata": {},
    "source": [
     "---\n",
+    "## **Understanding Documentation** <a id='documentation'></a>\n",
+    "\n",
+    "Links to documentation for Python and the packages used or referenced in this course:\n",
+    "- [Python](https://docs.python.org/)\n",
+    "- [datascience](http://data8.org/datascience/)\n",
+    "- [NumPy](https://docs.scipy.org/doc/numpy/reference/)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "## **GitHub** <a id='github'></a>\n",
     "\n",
     "GitHub is a website where people can store the code they wrote for specific projects. It also allows developers to collaborate together and identify bugs/issues. This guide is on GitHub, and if there is an problem with the guide or suggestion you have, you can create a new issue on GitHub to let the contributors know. \n",
     "\n",
-    "If you are considering going into a field with software development intertwined into it in any form, it would be essential to learn how to use Git and GitHub, or one of their alternatives."
+    "If you are considering going into a field with software development intertwined into it in any form, understanding how to use Git and GitHub is essential."
    ]
   }
  ],
