--- a/DS-100_Technical_Guide.ipynb
+++ b/DS-100_Technical_Guide.ipynb
@@ -1107,7 +1107,15 @@
     "Links to documentation for Python and the packages used or referenced in this course:\n",
     "- [Python](https://docs.python.org/)\n",
     "- [datascience](http://data8.org/datascience/)\n",
-    "- [NumPy](https://docs.scipy.org/doc/numpy/reference/)\n"
+    "- [NumPy](https://docs.scipy.org/doc/numpy/reference/)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/ds_where.png\">\n"
    ]
   },
   {
@@ -1139,7 +1147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
