--- a/DS-100_Technical_Guide.ipynb
+++ b/DS-100_Technical_Guide.ipynb
@@ -18,14 +18,22 @@
     "    - [NumPy](#numpy)\n",
     "    - [datascience](#datascience)\n",
     "- [Understanding Documentation](#documentation)\n",
-    "- [GitHub](#github)"
+    "- [GitHub](#github)\n",
+    "\n",
+    "<sup>The table of contents is only usable in Jupyter Notebooks or on [nbviewer](https://nbviewer.org/github/langdon/ds-100/blob/cethan-ec_file_jupyter-draft/DS-100_Technical_Guide.ipynb#documentation). If you are viewing this on GitHub, you will need to simply scroll.</sup>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **The Shared Computing Cluster (SCC)** <a id='scc'></a>\n",
     "\n",
     "The SCC is what all students in DS-100 will be using to run the files required for their assignments. It is a diverse Linux cluster of numerous components including over 9,000 shared CPU cores, 250 GPU cores and 1 petabyte of storage. The SCC is mainly used for tasks that require high-performance computing from disciplines such as engineering, biostatistics, and machine learning. \n"
@@ -47,7 +55,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **Python** <a id='python'></a>"
    ]
   },
@@ -70,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +347,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **Importing packages** <a id='packages'></a>\n",
     "\n",
     "To import a package, use the *import* keyword.\n",
@@ -353,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### np.array\n",
+    "#### [np.array](https://numpy.org/doc/stable/reference/generated/numpy.array.html)\n",
     "np.array('array_like object', dtype=None)\n",
     "\n",
     "Arrays from NumPy are similar to the lists in Python, but they are not as flexible when it comes to the variability of data types it can hold at once. All elements within a NumPy array must be the same data type. NumPy will try to pick the data type that all values within the array can fit into (*without* removing any parts of an element)."
@@ -388,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -421,14 +441,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### np.arange"
+    "#### [np.arange](https://numpy.org/doc/stable/reference/generated/numpy.arange.html?)\n",
+    "\n",
+    "np.arange(start, stop, step)\n",
+    "\n",
+    "np.arange creates an array that contains a sequence of numbers. The first argument is the starting number, the second argument is the stopping number, and the third argument is the step size. The stopping number is not included in the array."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5 7 9]\n",
+      "[9 7 5 3 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "#### np.diff"
+    "# A normal array counting by 2s\n",
+    "np_arange = np.arange(1, 10, 2)\n",
+    "print(np_arange)\n",
+    "\n",
+    "# A normal array counting by 2s, but backwards\n",
+    "np_arange = np.arange(9, 0, -2)\n",
+    "print(np_arange)"
    ]
   },
   {
@@ -448,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +525,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +587,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1113,7 @@
    ],
    "source": [
     "ca_where = ca_table.with_columns(\n",
-    "    'Extra', ['?' for i in range(4)]\n",
+    "    'Extra', ['?'] * 4\n",
     ")\n",
     "print('Base Table')\n",
     "ca_where.show()\n",
@@ -1101,28 +1142,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **Understanding Documentation** <a id='documentation'></a>\n",
     "\n",
     "Links to documentation for Python and the packages used or referenced in this course:\n",
     "- [Python](https://docs.python.org/)\n",
     "- [datascience](http://data8.org/datascience/)\n",
     "- [NumPy](https://docs.scipy.org/doc/numpy/reference/)\n",
-    "\n"
+    "\n",
+    "Documentation's official definition is \"material that provides official information or evidence or that serves as a record\". For programming, documentation is a way for the creators of langauges and packages to provide information about their code. Additionally, when writing your own programs, you can add in documentaton to help others understand your code. \n",
+    "\n",
+    "The image below is a screenshot of the documentation for the 'Table.where()' function from the datascience package. It shows the function's name, parameters, and a description of what the function does. Furthermore, it also provides the restraints for the parameters, and the possible return values."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images/ds_where.png\">\n"
+    "<img src=\"images/ds_where.png\"><br>\n",
+    "<sup>Image taken from [the datascience documentation webpage](http://data8.org/datascience/_autosummary/datascience.tables.Table.where.html?)</sup><br>\n",
+    "\n",
+    "\n",
+    "For some packages, the documentation will also list examples of the function being used. This is a great way to learn how to use a function, and it is also a good way to see how the function works. Below are the examples for the 'Table.where()' function.\n",
+    "\n",
+    "<img src=\"images/ds_where-examples.png\"><br>\n",
+    "<sup>Image taken from [the datascience documentation webpage](http://data8.org/datascience/_autosummary/datascience.tables.Table.where.html?)</sup>\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## **GitHub** <a id='github'></a>\n",
     "\n",
     "GitHub is a website where people can store the code they wrote for specific projects. It also allows developers to collaborate together and identify bugs/issues. This guide is on GitHub, and if there is an problem with the guide or suggestion you have, you can create a new issue on GitHub to let the contributors know. \n",
@@ -1147,7 +1210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
