formatting finally fixed

--- a/DS-100_Technical_Guide.ipynb
+++ b/DS-100_Technical_Guide.ipynb
@@ -20,7 +20,7 @@
     "- [Understanding Documentation](#documentation)\n",
     "- [GitHub](#github)\n",
     "\n",
-    "<sup>The table of contents is only usable in Jupyter Notebooks or on [nbviewer](https://nbviewer.org/github/langdon/ds-100/blob/cethan-ec_file_jupyter-draft/DS-100_Technical_Guide.ipynb). If you are viewing this on GitHub, you will need to simply scroll.</sup>"
+    "The table of contents is only usable in Jupyter Notebooks or on [nbviewer](https://nbviewer.org/github/langdon/ds-100/blob/cethan-ec_file_jupyter-draft/DS-100_Technical_Guide.ipynb). If you are viewing this on GitHub, you will need to simply scroll."
    ]
   },
   {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1166,13 +1166,13 @@
    "metadata": {},
    "source": [
     "<img src=\"images/ds_where.png\"><br>\n",
-    "<sup>Image taken from [the datascience documentation webpage](http://data8.org/datascience/_autosummary/datascience.tables.Table.where.html?)</sup><br>\n",
+    "Image taken from [the datascience documentation webpage](http://data8.org/datascience/_autosummary/datascience.tables.Table.where.html?)<br>\n",
     "\n",
     "\n",
     "For some packages, the documentation will also list examples of the function being used. This is a great way to learn how to use a function, and it is also a good way to see how the function works. Below are the examples for the 'Table.where()' function.\n",
     "\n",
     "<img src=\"images/ds_where-examples.png\"><br>\n",
-    "<sup>Image taken from [the datascience documentation webpage](http://data8.org/datascience/_autosummary/datascience.tables.Table.where.html?)</sup>\n"
+    "Image taken from [the datascience documentation webpage](http://data8.org/datascience/_autosummary/datascience.tables.Table.where.html?)\n"
    ]
   },
   {
