--- a/DS-100_Technical_Guide.ipynb
+++ b/DS-100_Technical_Guide.ipynb
@@ -45,10 +45,32 @@
    "source": [
     "### **Accessing the SCC**\n",
     "\n",
-    "1. Ensure that you are not on Boston University’s “BU (802.1x)” wifi network\n",
+    "1. Ensure that you are on Boston University’s “BU (802.1x)” wifi network\n",
+    "    - **Not** BU Guest\n",
     "2. Go to [the SCC site](https://scc-ondemand.bu.edu)\n",
     "3. Login to the SCC with you kerberos username and password (the account you use for the student link)\n",
-    "4. Optional: Save/bookmark this page as you will be accessing it often\n"
+    "4. Optional: Save/bookmark this page as you will be accessing it often\n",
+    "\n",
+    "### **Copy/Pasting Materials**\n",
+    "1. While on the homepage of the SCC, click on the \"/projectnb/ds100\" tab under the 'Files' dropdown menu\n",
+    "\n",
+    "<img src=\"images/homepage-projectnb.png\">\n",
+    "\n",
+    "2. This will lead you to a separate page that looks like this:\n",
+    "\n",
+    "<img src=\"images/files-landing.png\">\n",
+    "\n",
+    "3. From here, click into the \"materials\" folder and then click the folder you want to copy *a single time* to highlight it. Then click the \"Copy\" button near the top left of the page.\n",
+    "\n",
+    "<img src=\"images/files-materials.png\">\n",
+    "\n",
+    "4. Next, go back to the page where you can see the 5 folders (admin, archive, materials, projects, students), this was the page you were on when you clicked on the \"/projectnb/ds100\" tab.\n",
+    "\n",
+    "5. Click on the \"students\" folder, then find the folder with your name and then click into that folder. After you are in your folder, click the \"Paste\" button near the top left of the page.\n",
+    "\n",
+    "<img src=\"images/files-students.png\">\n",
+    "\n",
+    "### **Starting up a Jupyter Notebook Session**"
    ]
   },
   {
@@ -84,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -242,16 +264,16 @@
    "metadata": {},
    "source": [
     "\n",
-    "### **Using Functions** (Lec #3)\n",
+    "### **Using Functions** <a id='using_functions'></a>(Lec #3)\n",
     "\n",
     "A function is a block of code that will run whenever it is called. The variable listed inside of the parentheses are parameters, while the actual value that is sent to the function are arguments. Additionally, some functions can take *multiple* arguments (i.e. np.array(), max(), min(), etc).\n",
     "\n",
-    "**Some** functions have optional parameters. These parameters do not need to be specified in-order for the function to work. For example, in np.array() you can specify the type of data all elements should be, but NumPy can do that automatically if you choose to *not* specify."
+    "**Some** functions have optional parameters. These parameters do not need to be specified in-order for the function to work. For example, in np.array() you can specify the type of data all elements should be, but NumPy can do that automatically if you choose to *not* specify. If you head over to the [\"Understanding Documentation\"](#documentation) section, you will see an example of a function with said optional parameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +547,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +609,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1180,9 @@
     "\n",
     "Documentation's official definition is \"material that provides official information or evidence or that serves as a record\". For programming, documentation is a way for the creators of langauges and packages to provide information about their code. Additionally, when writing your own programs, you can add in documentaton to help others understand your code. \n",
     "\n",
-    "The image below is a screenshot of the documentation for the 'Table.where()' function from the datascience package. It shows the function's name, parameters, and a description of what the function does. Furthermore, it also provides the restraints for the parameters, and the possible return values."
+    "The image below is a screenshot of the documentation for the 'Table.where()' function from the datascience package. It shows the function's name, parameters, and a description of what the function does. Furthermore, it also provides the restraints for the parameters, and the possible return values. \n",
+    "\n",
+    "The documentation also provides the default values for optional parameters, which in this case is 'None' for both *'value_or_predicate'* and *'other'*. In the examples for the function, it shows examples of *'other'* being both used and not used."
    ]
   },
   {
@@ -1168,11 +1192,13 @@
     "<img src=\"images/ds_where.png\"><br>\n",
     "Image taken from [the datascience documentation webpage](http://data8.org/datascience/_autosummary/datascience.tables.Table.where.html?)<br>\n",
     "\n",
+    "For some packages, the documentation will also list examples of the function being used. This is a great way to learn how a functions works, and how to use it. Below are the examples for the 'Table.where()' function.\n",
     "\n",
-    "For some packages, the documentation will also list examples of the function being used. This is a great way to learn how to use a function, and it is also a good way to see how the function works. Below are the examples for the 'Table.where()' function.\n",
+    "<br><img src=\"images/ds_where-examples.png\"><br>\n",
+    "Image taken from [the datascience documentation webpage](http://data8.org/datascience/_autosummary/datascience.tables.Table.where.html?)<br>\n",
     "\n",
-    "<img src=\"images/ds_where-examples.png\"><br>\n",
-    "Image taken from [the datascience documentation webpage](http://data8.org/datascience/_autosummary/datascience.tables.Table.where.html?)\n"
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1210,7 +1236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
