--- a/DS-100_Technical_Guide.ipynb
+++ b/DS-100_Technical_Guide.ipynb
@@ -70,7 +70,36 @@
     "\n",
     "<img src=\"images/files-students.png\">\n",
     "\n",
-    "### **Starting up a Jupyter Notebook Session**"
+    "### **Starting up a Jupyter Notebook Session**\n",
+    "\n",
+    "1. From the top menu bar, click on the \"Interactive Apps\" dropdown menu and then click on \"Jupyter Notebook\" under the \"Servers\" section.\n",
+    "\n",
+    "<img src=\"images/homepage-interactiveapps.png\">\n",
+    "\n",
+    "2. Once you are there, you will see a page that looks like this:\n",
+    "\n",
+    "<img src=\"images/sessions-jupyternotebook.png\" width=80% height=80%>\n",
+    "\n",
+    "3. From here, make sure you have the correct settings for each section:\n",
+    "    - List of modules to load:\n",
+    "        - python3\n",
+    "    - Pre-Launch Command:\n",
+    "        - source /projectnb/ds100/materials/tools/startup.sh\n",
+    "    - Interface:\n",
+    "        - notebook\n",
+    "    - Working Directory:\n",
+    "        - /projectnb/ds100/students/*your_username*\n",
+    "        - In case it was not clear, you should replace *your_username* with your BU username\n",
+    "    - Number of hours:\n",
+    "        - 2, you can change it to 3 or more if you are going to be working for that long\n",
+    "    - Number of cores:\n",
+    "        - 1, do not change this, you will not need more than one core\n",
+    "    - Number of GPUs:\n",
+    "        - 0, do not change this, you will not need a GPU\n",
+    "\n",
+    "4. Once you have the correct settings, click the \"Launch\" button at the bottom of the page.\n",
+    "\n",
+    "5. The page will refresh and you will see a new session appear in the list of sessions. You will enter a queue and once your session has started, click on the \"Connect\" button."
    ]
   },
   {
@@ -1236,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
