--- a/DS-100_Technical_Guide.ipynb
+++ b/DS-100_Technical_Guide.ipynb
@@ -20,7 +20,7 @@
     "- [Understanding Documentation](#documentation)\n",
     "- [GitHub](#github)\n",
     "\n",
-    "The table of contents is only usable in Jupyter Notebooks or on [nbviewer](https://nbviewer.org/github/langdon/ds-100/blob/cethan-ec_file_jupyter-draft/DS-100_Technical_Guide.ipynb). If you are viewing this on GitHub, you will need to simply scroll."
+    "The table of contents is only usable in Jupyter Notebooks or on [nbviewer](https://nbviewer.org/github/langdon/ds-100/blob/cethan-ec_file_jupyter-draft/DS-100_Technical_Guide.ipynb). If you are viewing this on GitHub, the list numbers will be messed up and you will need to simply scroll."
    ]
   },
   {
