--- a/DS-100_Technical_Guide.ipynb
+++ b/DS-100_Technical_Guide.ipynb
@@ -17,6 +17,7 @@
     "- [Packages](#packages)\n",
     "    - [NumPy](#numpy)\n",
     "    - [datascience](#datascience)\n",
+    "- [Common Patterns](#commonpatterns)\n",
     "- [Understanding Documentation](#documentation)\n",
     "- [GitHub](#github)\n",
     "\n",
@@ -31,10 +32,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **The Shared Computing Cluster (SCC)** <a id='scc'></a>\n",
+    "## **The Shared Computing Cluster (SCC)** <a id='scc' class=\"anchor\"></a>\n",
     "\n",
     "The SCC is what all students in DS-100 will be using to run the files required for their assignments. It is a diverse Linux cluster of numerous components including over 9,000 shared CPU cores, 250 GPU cores and 1 petabyte of storage. The SCC is mainly used for tasks that require high-performance computing from disciplines such as engineering, biostatistics, and machine learning. \n"
    ]
@@ -110,10 +112,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Python** <a id='python'></a>"
+    "## **Python** <a id='python' class=\"anchor\"></a>"
    ]
   },
   {
@@ -135,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -402,10 +405,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Importing packages** <a id='packages'></a>\n",
+    "## **Importing packages** <a id='packages' class=\"anchor\"></a>\n",
     "\n",
     "To import a package, use the *import* keyword.\n",
     "\n",
@@ -424,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,11 +437,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
-    "## **Package: NumPy** <a id='numpy'></a>"
+    "## **Package: NumPy** <a id='numpy' class=\"anchor\"></a>"
    ]
   },
   {
@@ -459,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -524,11 +529,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
-    "## **Package: datascience** <a id='datascience'></a>"
+    "## **Package: datascience** <a id='datascience' class=\"anchor\"></a>"
    ]
   },
   {
@@ -540,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +582,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +644,7 @@
        "Row 4 | ?                 | N/A"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1197,10 +1203,138 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Understanding Documentation** <a id='documentation'></a>\n",
+    "## **Common Patterns** <a id='commonpatterns' class=\"anchor\"></a>\n",
+    "\n",
+    "In this course, there will be many different patterns that you will see. Some of these patterns are very common, and you will see them in many different places. Below are some of the most common patterns that you will see in this course.\n",
+    "\n",
+    "- [Simple functions](#simplefunctions)\n",
+    "- [For loops](#forloops)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Simple Functions** <a id='simplefunctions'></a>\n",
+    "\n",
+    "In this class, most of the functions you write will not be complex in any way. The majority of them will simply be a few lines of code that perform a specific task. Additionally, you will be using these simple functions and applying to them to tables or lists/arrays. Below is an example of a simple function that squares a number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def square(num):\n",
+    "    return num ** 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **For Loops** <a id='forloops'></a>\n",
+    "The first pattern is the use of a for loop. A for loop is a type of loop that will run a block of code a specified number of times. The syntax for a for loop is as follows:\n",
+    "    \n",
+    "```\n",
+    "for i in range(integer):\n",
+    "    # do something\n",
+    "```\n",
+    "\n",
+    "In this class we will often use a for loop to do use a function we defined multiple times. Below is an example of the 'square' function defined above being applied to the elements of a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "Hello World!\n",
+      "Hello World!\n",
+      "Hello World!\n",
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello_world():\n",
+    "    print('Hello World!')\n",
+    "    \n",
+    "for i in range(5):\n",
+    "    hello_world()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, there are times when a function does not print out a value, but instead returns it. In this case, we can use a for loop to run the function some number of times, then store the returned values in a list. Below is an example of a for loop that stores the returned values in a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello World!', 'Hello World!', 'Hello World!', 'Hello World!', 'Hello World!']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nIt is possbile to skip the temporary variable, but it is there to show the process more clearly.\\nAdditionally, the use of list comprehension is possible, but it is discouraged in this class.\\n'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def hello_world():\n",
+    "    return 'Hello World!'\n",
+    "\n",
+    "new_list = [] # creating a new list\n",
+    "\n",
+    "for i in range(5): # creating the for loop, this one runs 5 times\n",
+    "    temp = hello_world() # we run the function, and assign the returned value to a temporary variable\n",
+    "    new_list.append(temp) # then append the temporary value to our list 'new_list'\n",
+    "    \n",
+    "print(new_list)\n",
+    "\n",
+    "\"\"\"\n",
+    "It is possbile to skip the temporary variable, but it is there to show the process more clearly.\n",
+    "Additionally, the use of list comprehension is possible, but it is discouraged in this class.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Understanding Documentation** <a id='documentation' class=\"anchor\"></a>\n",
     "\n",
     "Links to documentation for Python and the packages used or referenced in this course:\n",
     "- [Python](https://docs.python.org/)\n",
@@ -1238,10 +1372,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **GitHub** <a id='github'></a>\n",
+    "## **GitHub** <a id='github' class=\"anchor\"></a>\n",
     "\n",
     "GitHub is a website where people can store the code they wrote for specific projects. It also allows developers to collaborate together and identify bugs/issues. This guide is on GitHub, and if there is an problem with the guide or suggestion you have, you can create a new issue on GitHub to let the contributors know. \n",
     "\n",
@@ -1265,7 +1400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
